<resources>
    <string name="app_name">SCHOOL CRM</string>
    <string name="appsplashbg">AppSplashBG</string>
    <string name="app_title">SCHOOL CRM</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">login</string>
    <string name="forgot_password_click_here"><u>Forgot password</u></string>
    <string name="teacher_name">Parent Name</string>
    <string name="student_name">student name</string>
    <string name="user_image">user image</string>
    <string name="notification">notification</string>
    <string name="notification1">Notification</string>
    <string name="back">back</string>
    <string name="home_item_list_image">home item list image</string>
    <string name="dashboard">dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="teacher">Teacher</string>
    <string name="teachers">Teachers</string>
    <string name="subject">subject</string>
    <string name="subjects">Subjects</string>
    <string name="class_routine">class routine</string>
    <string name="class_routine_">Class Routine</string>
    <string name="study_material">study material</string>
    <string name="study_material_">Study Material</string>
    <string name="academic_syllabus">academic syllabus</string>
    <string name="academic_syllabus_">Academic Syllabus</string>
    <string name="exam_marks">exam marks</string>
    <string name="exam_marks_">Exam Marks</string>
    <string name="payment">payment</string>
    <string name="payment_">Payment</string>
    <string name="library">library</string>
    <string name="library_">Library</string>
    <string name="transport">transport</string>
    <string name="transport_">Transport</string>
    <string name="assignment">assignment</string>
    <string name="assignment_">Assignment</string>
    <string name="studymat">study material</string>
    <string name="studymat_">Study Material</string>
    <string name="noticeboard">noticeboard</string>
    <string name="noticeboard_">Noticeboard</string>
    <string name="messages">Messages</string>
    <string name="account">account</string>
    <string name="account_">Account</string>
    <string name="calender">calender</string>
    <string name="calender_">Calender</string>
    <string name="class_name">[class name]</string>
    <string name="school_name">[School name]</string>
    <string name="usn_roll_number">[usn/roll number]</string>
    <string name="city_name">[City name]</string>
    <string name="_continue">continue</string>
    <string name="a_password_reset_link_will_be_send_to_above_email">A password reset link will be send to above email</string>
    <string name="notification_dummy_heading">Notification dummy heading</string>
    <string name="dummy_multiline_text">Notification dummy text. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="notifications">Notifications</string>
    <string name="student_name_header">Student Name</string>
    <string name="student_email">Student E-Mail</string>
    <string name="toolbar">toolbar</string>
    <string name="upload_user_pic">upload user pic</string>
    <string name="edit_profile">edit profile</string>
    <string name="full_name">FULL NAME</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="full_address">FULL ADDRESS</string>
    <string name="relation_detail">Give Relationship Name</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="mother">mom</string>
    <string name="father">dad</string>
    <string name="cancel">Cancel</string>
    <string name="submit">submit</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="gallery_">Gallery</string>
    <string name="news">News</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="extraCurriculum">ExtraCurriculum</string>
    <string name="leaderBaord">LeaderBaord</string>
    <string name="scholarship">Scholarship</string>
    <string name="notify_msg_text">You have a new message from</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="current_password">CURRENT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="search_teachers">Search teachers…</string>
    <string name="search_subjects">Search subjects…</string>
    <string name="arrow_right">arrow right</string>
    <string name="days">days</string>
    <string name="class_routine_is_subject_to_change_please_do_keep_checking_more_often">Class routine is subject to change. Please do keep checking more often.</string>
    <string name="weekly_class_routine">weekly class routine</string>
    <string name="search_study_materials">Search study materials…</string>
    <string name="search_route">Search route…</string>
    <string name="search_notice">Search notice…</string>
    <string name="search_payments">Search payments…</string>
    <string name="download">download</string>
    <string name="dummy_date">06/28/2017</string>
    <string name="dummy_marks">100</string>
    <string name="dummy_obtain_marks">70</string>
    <string name="dummy_total_marks">Total Marks</string>
    <string name="dummy_obtained_marks">Obtained Marks</string>
    <string name="dummy_class">8 - B</string>
    <string name="dummy_file">dummy file</string>
    <string name="dummy_uploader">dummy uploader</string>
    <string name="search_academic_syllabus">Search academic syllabus…</string>
    <string name="search_exam_paper">Search exam paper…</string>
    <string name="status">status</string>
    <string name="amount">amount</string>
    <string name="rupee_symbol">&#8377;&#160;</string>
    <string name="tab_icon">tab icon</string>
    <string name="request">request</string>
    <string name="issue_end_date">issue end date</string>
    <string name="issue_start_date">issue start date</string>
    <string name="search_books">Search books…</string>
    <string name="no_of_vehicles">No of vehicles:&#160;</string>
    <string name="view">view</string>
    <string name="date">date:&#160;</string>
    <string name="exam_date">Exam date :&#160;</string>
    <string name="request_book">request book</string>
    <string name="select_issue_date">select issue date</string>
    <string name="message_send">message send</string>
    <string name="write_your_message_here">Write your message here…</string>
    <string name="search_messages">Search messages…</string>
    <string name="search_your_kids">Search your kids…</string>
    <string name="kidsLocation">kidsLocation</string>
    <string name="kids_Location">kid\'s location</string>
    <string name="search_your_subject">Search your subject…</string>
    <string name="chat">chat</string>
    <string name="exam_title">Exam Title</string>
    <string name="please_wait">please wait</string>
    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="relation">Relation</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="bench">Bench</string>
    <string-array name="custom_weekdays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_notification">Loading Notification … </string>
    <string name="faq_expandable_list_indicator">faq expandable list indicator</string>
    <string name="facing_any_problem_n_we_are_here_to_help">facing any problem? we are here to help :)</string>
    <string name="loading">loading…</string>
    <string name="search_assignment_task">Search Assignment Task</string>
    <string name="search_news">Search News</string>
    <string name="powered_by">powered by</string>
    <string name="reports_to">Reports to</string>
    <string name="dev_company">Dev company</string>
    <string name="dev_company_name">semicolon india</string>
    <string name="marks">marks</string>
    <string name="submit_date">Submit date</string>
    <string name="upload_date">Upload date</string>
    <string name="route_title">Route Title</string>
    <string name="hide">Hide</string>
    <string name="description">Description:</string>
    <string name="holiday_date">Holiday Date:</string>
    <string name="title">Title</string>
    <string name="last_know_location">Last know location:</string>
    <string name="updated">Updated:</string>
    <string name="call">call</string>
    <string name="dev_number">+91 90668 36842</string>
    <string name="message">message</string>
    <string name="mail">mail</string>
    <string name="company_address">company address</string>
    <string name="whatsapp">whatsapp</string>
    <string name="contact_email">contact@startcabs.in</string>
    <string name="dev_address">#40, near rose garden\nkelkere, banarghatta road,\nbangalore 560083</string>
    <string name="BusRegNo">Bus Reg No:</string>
    <string name="bus_reg_no">Bus Reg No</string>
    <string name="call_driver">Call driver</string>
    <string name="touch_to_call_driver">Touch to\ncall driver</string>
    <string name="class1">Class</string>
    <string name="select_month">Select Month</string>
    <string name="connection_error">Connection error</string>
    <string name="ok">OK</string>
    <string name="no_internet_msg">Please check the internet connection and try again.</string>
    <string name="Class1">Class1</string>
    <string name="Subject">Subject</string>
    <string name="Date">Date</string>
    <string name="marks_obtained">Marks Obtained</string>
    <string name="total_marks">Total Marks</string>
    <string name="grade">Grade</string>
    <string name="date1">Date</string>
    <string name="attendance_sheet">Attendance Sheet</string>
    <string name="total_attendance_percentage">total Attendance Percentage</string>
    <string name="kid_name">Kid Name</string>
    <string name="subject_name">Subject Name</string>
    <string name="section_b">Section: B</string>
    <string name="current_year">Current Year</string>
    <string name="class_stv_v">Class: STV V</string>
    <string name="adversiment">Adversiment</string>
    <string name="time">Time</string>
    <string name="select_action">select_action</string>
    <string name="categories">Categories</string>
    <string name="char_limit">Character Limit 512</string>
    <string name="char_limit_512_remaining">Maximum character limit is 512, remaining</string>
    <string name="apply">Apply</string>
    <string name="Scholarship">Scholarship</string>
    <string name="ExtraCurriculam">Extra Curriculum</string>
    <string name="Support">Support</string>
    <string name="name">Name</string>
    <string name="requested">requested</string>
    <string name="section">Section</string>
    <string name="achievement">Achievement</string>
    <string name="LeaderBoard">Leader Board</string>
    <string name="Bench">Word From Bench</string>
    <string name="year_2017">year 2017</string>
    <string name="Feedback">feedback</string>
    <string name="Excalation">excalation</string>
    <string name="file_name">File Name</string>
    <string name="year">year</string>
    <string name="Class">Class</string>
    <string name="s_no">S No</string>
    <string name="roll_number">Roll number</string>
    <string name="_000">000</string>
    <string name="remark">remark</string>
</resources>