<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">

    <in.semicolonindia.schoolcrm.civ.CircleImageView
        android:id="@+id/civKidImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_book_light_holo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvKidName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvKidLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_know_location"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvKidBusRegNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_reg_no"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvUpDT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCallDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_call_24px"
        android:text="@string/touch_to_call_driver" />
</LinearLayout>