<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="6dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_light">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/app_title"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:background="@drawable/button_background_primary"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/download"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/subject"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:background="@android:color/transparent"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:text="@string/class1"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/tvClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:text="@string/Date"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:text="@string/dummy_file"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/tv_File_Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center|end"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvDesp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/dummy_multiline_text"
            android:background="@android:color/transparent"
            android:textColor="@color/colorTextSecondary" />

    </LinearLayout>
</LinearLayout>

